--- a/src/client/screen.css
+++ b/src/client/screen.css
@@ -2,7 +2,8 @@ body {
 	background-color: #42a9cc;
 }
 
-#logo {
+h1#logo {
+	margin-top: 12px;
 	margin-left: auto;
 	margin-right: auto;
 	text-align: center;
