--- a/src/client/screen.css
+++ b/src/client/screen.css
@@ -14,6 +14,7 @@ h1#logo {
 
 #tagline {
 	margin-top: 5px;
+	margin-bottom: 0px;
 	text-align: center;
 	font-size: 14px;
 	color: #0d576d;
@@ -21,6 +22,8 @@ h1#logo {
 
 #drawingArea {
 	height: 600px;
-	margin: 0 auto;
-	background-color: grey;
+	margin-top: 10px;
+	margin-left: auto;
+	margin-right: auto;
+	background-color: white;
 }
