Working on adding arrow to top of drawing area

--- a/src/client/screen.css
+++ b/src/client/screen.css
@@ -27,3 +27,9 @@ h1#logo {
 	margin-right: auto;
 	background-color: white;
 }
+
+#drawingAreaArrow {
+	text-align: center;
+	margin-top: 0px;
+	margin-bottom: -24px;
+}
