--- a/src/client/screen.css
+++ b/src/client/screen.css
@@ -59,6 +59,12 @@ h1#logo {
 	margin-top: 13px;
 	margin-left: auto;
 	margin-right: auto;
+	margin-bottom: 0;
 	font-size: 15px;
 	color: white;
+}
+
+#joinUs {
+	text-align: center;
+	margin-top: 13px;
 }
