Corrected color values

--- a/src/client/screen.css
+++ b/src/client/screen.css
@@ -1,5 +1,5 @@
 body {
-	background-color: #42a9cc;
+	background-color: #41a9cc;
 }
 
 h1#logo {
@@ -71,7 +71,7 @@ h1#logo {
 	margin-left: auto;
 	margin-right: auto;
 	color: white;
-	background-color: #006f8f;
+	background-color: #00799c;
 	height: 35px;
 	line-height: 35px;
 	width: 175px;
