--- a/src/client/screen.css
+++ b/src/client/screen.css
@@ -81,3 +81,7 @@ h1#logo {
 	text-decoration: none;
 	text-transform: uppercase;
 }
+
+#joinUs:hover, #joinUs._hover_ {
+	background-color: #006f8f;
+}
