--- a/src/client/screen.css
+++ b/src/client/screen.css
@@ -52,6 +52,14 @@ h1#logo {
 	padding: 0;
 	border: solid 1px grey;
 	margin: 0;
+	color: #595959;
+	background-color: #e5e5e5;
+	height: 30px;
+	line-height: 30px;
+	width: 70px;
+	border-radius: 2px;
+	box-shadow: 0 1px 0 0 #a7a9ab;
+	text-transform: uppercase;
 }
 
 #footer {
