--- a/src/client/screen.css
+++ b/src/client/screen.css
@@ -49,8 +49,8 @@ h1#logo {
 	position: absolute;
 	top: 15px;
 	right: 15px;
+	border: none;
 	padding: 0;
-	border: solid 1px grey;
 	margin: 0;
 	color: #595959;
 	background-color: #e5e5e5;
