--- a/src/client/screen.css
+++ b/src/client/screen.css
@@ -62,6 +62,15 @@ h1#logo {
 	text-transform: uppercase;
 }
 
+#clearButton:hover, #clearButton._hover_ {
+	background-color: #d9d9d9;
+}
+
+#clearButton:active, #clearButton._active_ {
+	top: 16px;
+	box-shadow: none;
+}
+
 #footer {
 	text-align: center;
 	margin-top: 13px;
