--- a/src/client/screen.css
+++ b/src/client/screen.css
@@ -26,6 +26,7 @@ h1#logo {
 	margin-left: auto;
 	margin-right: auto;
 	background-color: white;
+	border-radius: 2px;
 }
 
 #drawingAreaContainer {
