isElementCenteredInPage() properly accounts for scroll bars

--- a/src/client/screen.css
+++ b/src/client/screen.css
@@ -22,11 +22,11 @@ h1#logo {
 
 #drawingArea {
 	height: 600px;
-	margin-top: 10px;
-	margin-left: auto;
-	margin-right: auto;
-	background-color: white;
-	border-radius: 2px;
+	/*margin-top: 10px;*/
+	/*margin-left: auto;*/
+	/*margin-right: auto;*/
+	/*background-color: white;*/
+	/*border-radius: 2px;*/
 }
 
 #drawingAreaContainer {
