--- a/src/client/screen.css
+++ b/src/client/screen.css
@@ -22,7 +22,7 @@ h1#logo {
 
 #drawingArea {
 	height: 600px;
-	/*margin-top: 10px;*/
+	margin-top: 10px;
 	/*margin-left: auto;*/
 	/*margin-right: auto;*/
 	/*background-color: white;*/
