--- a/src/client/screen.css
+++ b/src/client/screen.css
@@ -20,18 +20,14 @@ h1#logo {
 	color: #0d576d;
 }
 
-#drawingArea {
-	background-color: green;
+#drawing-area {
+	height: 600px;
+	margin-top: 10px;
+	margin-left: auto;
+	margin-right: auto;
+	background-color: white;
+	border-radius: 2px;
 }
-
-/*#drawingArea {*/
-	/*height: 600px;*/
-	/*margin-top: 10px;*/
-	/*margin-left: auto;*/
-	/*margin-right: auto;*/
-	/*background-color: white;*/
-	/*border-radius: 2px;*/
-/*}*/
 
 #drawingAreaContainer {
 	background-color: grey;
