drawing area arrow CSS tests work in iframe

--- a/src/client/screen.css
+++ b/src/client/screen.css
@@ -29,12 +29,12 @@ h1#logo {
 	border-radius: 2px;
 }
 
-#drawingAreaContainer {
+#drawing-area-container {
 	background-color: grey;
 	position: relative;
 }
 
-#drawingAreaArrow {
+#drawing-area-arrow {
 	background-image: url(/images/arrow.png);
 	background-repeat: no-repeat;
 	background-position: center;
