Applied 'Varela Round' web font. (Not tested yet)

--- a/src/client/screen.css
+++ b/src/client/screen.css
@@ -1,6 +1,11 @@
+@font-face {
+	font-family: "VarelaRound-Regular";
+	src: url("/fonts/varela-round/VarelaRound-Regular.otf");
+}
+
 body {
 	background-color: #41a9cc;
-	font-family: "Helvetica";
+	font-family: "VarelaRound-Regular", "Helvetica", "sans-serif";
 }
 
 h1#logo {
