--- a/src/client/screen.css
+++ b/src/client/screen.css
@@ -53,7 +53,7 @@ h1#logo {
 }
 
 #clear-button {
-	font-family: "VarelaRound-Regular", "monospace";
+	font-family: "VarelaRound-Regular", "Helvetica", "sans-serif";
 	position: absolute;
 	top: 15px;
 	right: 15px;
