Determined font-family, weight, and variant in stylesheets

--- a/src/client/screen.css
+++ b/src/client/screen.css
@@ -1,6 +1,6 @@
 body {
 	background-color: #41a9cc;
-	font-family: "alwyn-new-rounded-web", "Helvetica", "sans-serif";
+	font-family: "alwyn-new-rounded-web", "Helvetica", sans-serif;
 	font-weight: 300;
 }
 
@@ -50,7 +50,7 @@ body {
 }
 
 #clear-button {
-	font-family: "alwyn-new-rounded-web", "Helvetica", "sans-serif";
+	font-family: "alwyn-new-rounded-web", "Helvetica", sans-serif;
 	font-weight: 600;
 	font-size: 12px;
 	position: absolute;
