Finished migrating tests from PhantomJS to Selenium

--- a/src/client/screen.css
+++ b/src/client/screen.css
@@ -1,6 +1,6 @@
 body {
 	background-color: #41a9cc;
-	font-family: "alwyn-new-rounded-webss", "Helvetica", sans-serif;
+	font-family: "alwyn-new-rounded-web", "Helvetica", sans-serif;
 	font-weight: 300;
 }
 
