--- a/src/client/screen.css
+++ b/src/client/screen.css
@@ -7,17 +7,19 @@ body {
 }
 
 #logo {
+	line-height: 1;
 	margin-top: 12px;
 	margin-left: auto;
 	margin-right: auto;
 	margin-bottom: 0px;
 	text-align: center;
-	font-size: 22px;
+	font-size: 30px;
 	font-weight: 600;
 	color: white;
 }
 
 #tagline {
+	line-height: 17px;
 	margin-top: 5px;
 	margin-bottom: 0px;
 	text-align: center;
@@ -26,7 +28,7 @@ body {
 }
 
 #drawing-area {
-	height: 495px;
+	height: 475px;
 	background-color: white;
 	border-radius: 2px;
 }
@@ -81,6 +83,7 @@ body {
 }
 
 #footer {
+	line-height: 1.2;
 	text-align: center;
 	margin-top: 13px;
 	margin-left: auto;
