UI polish: 'Join Us' button is no longer flush to bottom of page

--- a/src/client/screen.css
+++ b/src/client/screen.css
@@ -3,6 +3,7 @@ body {
 	font-family: "alwyn-new-rounded-web", "Helvetica", sans-serif;
 	font-weight: 300;
 	margin: 0;
+	margin-bottom: 13px;
 	padding: 0;
 }
 
