--- a/src/client/screen.css
+++ b/src/client/screen.css
@@ -164,6 +164,7 @@ body {
 	background-color: #00799c;
 	font-weight: 400;
 	line-height: 35px;
+	margin-top: 17px;
 	margin-left: auto;
 	margin-right: auto;
 	text-align: center;
