--- a/src/client/screen.css
+++ b/src/client/screen.css
@@ -16,14 +16,21 @@ body {
 	height: 35px;
 	width: 100%;
 
+	/* color */
+	color: white;
+	background-color: #00799c;
+
 	/* text */
-	line-height: 35px;
+	font-weight: 400;
+	line-height: 35px;    /* vertical centering */
 	text-align: center;
 	text-transform: uppercase;
+	text-decoration: none;
 
 	/* decorations */
 	border: none;
 	box-shadow: 0 1px 0 0 #0d576d;
+	border-radius: 2px;
 }
 
 .button:hover, .button._hover_ {
@@ -129,23 +136,10 @@ body {
 }
 
 #join-us {
-	font-weight: 400;
-	font-size: 16px;
-	display: block;
-	text-align: center;
 	margin-top: 13px;
 	margin-left: auto;
 	margin-right: auto;
-	color: white;
-	background-color: #00799c;
-	height: 35px;
-	line-height: 35px;
 	width: 175px;
-	border-radius: 2px;
-	box-shadow: 0 1px 0 0 #0d576d;
-	vertical-align: middle;
-	text-decoration: none;
-	text-transform: uppercase;
 }
 
 #join-us:hover, #join-us._hover_ {
