--- a/src/client/screen.css
+++ b/src/client/screen.css
@@ -21,6 +21,7 @@ body {
 	background-color: #00799c;
 
 	/* text */
+	font-family: inherit;
 	font-weight: 400;
 	line-height: 35px;    /* vertical centering */
 	text-align: center;
@@ -41,6 +42,11 @@ body {
 	box-shadow: none;
 	position: relative;
 	top: 1px;
+}
+
+.button--drawing {
+	/* text */
+	font-size: 12px;
 }
 
 
@@ -118,7 +124,6 @@ body {
 }
 
 #clear-button {
-	font-family: "alwyn-new-rounded-web", "Helvetica", sans-serif;
 	font-weight: 600;
 	font-size: 12px;
 	color: #595959;
