--- a/src/client/screen.css
+++ b/src/client/screen.css
@@ -45,8 +45,13 @@ body {
 }
 
 .button--drawing {
+	/* size */
+	height: 30px;
+
 	/* text */
 	font-size: 12px;
+	font-weight: 600;
+	line-height: 30px;    /* vertical centering */
 }
 
 
@@ -124,12 +129,8 @@ body {
 }
 
 #clear-button {
-	font-weight: 600;
-	font-size: 12px;
 	color: #595959;
 	background-color: #e5e5e5;
-	height: 30px;
-	line-height: 30px;
 	box-shadow: 0 1px 0 0 #a7a9ab;
 }
 
